--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".DescriptionActivity"></activity>
+        <activity android:name=".PaymentActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginEntryActivity" />
+        <activity android:name=".ItemListActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".Cover">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
