--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DescriptionActivity"></activity>
+        <activity android:name=".TrackingActivity"></activity>
+        <activity android:name=".ConnectActivity" />
+        <activity android:name=".ShoppingCartActivity" />
+        <activity android:name=".DescriptionActivity" />
         <activity android:name=".PaymentActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
